# tomb

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN-DECISIONS.md  README.md  REQUIREMENTS.md  build.rs  lefthook.yml
.github/workflows/: ci.yml  release.yml
docs/: FORMAT-SPEC.md  FUTURE.md  how-long-to-crack.md
docs/plans/: 2026-03-07-enum-config-refactor-design.md  2026-03-07-enum-config-refactor-plan.md  2026-03-07-tomb-implementation.md  2026-03-07-tombui-design.md  2026-03-08-version-install-update.md
scripts/: install.sh
src/: cli.rs  lib.rs  main.rs
src/cipher/: aes.rs  lookup.rs  mod.rs  twofish.rs  xchacha.rs
src/format/: header.rs  inner.rs  mod.rs  padding.rs
src/key/: commit.rs  derive.rs  expand.rs  mod.rs
src/passphrase/: generate.rs  mod.rs  wordlist.rs
src/pipeline/: envelope.rs  mod.rs
tests/: bench_breakdown.rs  bench_ciphers.rs  bench_sizes.rs  cli.rs  integration.rs
tombui/: Cargo.toml
tombui/src/: app.rs  main.rs  ui.rs
tombui/src/screens/: generate.rs  home.rs  inspect.rs  mod.rs  open.rs  seal.rs  verify.rs
tombui/src/widgets/: header.rs  mod.rs  passphrase.rs  progress.rs
